# bme_prog2-lab

CppSwap/: README.md  swap.depend
lab1/: f1.txt
lab1/CppSwap/: swap.cpp  swap.layout
lab1/GTest/: GTest.cbp  GTest.layout  main.cpp
lab1/nagyobb/: CMakeLists.txt  fuggvenyeim.h  nagyobb.depend  nagyobb.layout  nagyobb_main.cpp
nagyobb/: fuggvenyeim.cpp
